@@ -12,7 +12,9 @@
     <packaging>jar</packaging>
 
     <properties>
+        <skipExportTests>false</skipExportTests>
         <licensePath>../../LICENSE_HEADER.txt</licensePath>
+        <skipTests>${skipIntegrationTests}</skipTests>
     </properties>
 
     <build>
@@ -21,23 +23,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <!--
-                        Fork each test in its own VM to minimize side effects of
-                        failed AMQ shutdowns and other unrelated failures.
-                    -->
-                    <forkMode>pertest</forkMode>
+                    <argLine>-Xmx512m -XX:MaxPermSize=128m</argLine>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
